updated for swarthmore

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1>Lucas Van Meter</h1>
       <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:30%;object-fit: cover;float:right;">
       <p>
-        I am a visiting instructor at Lewis & Clark College in the math department. My interests include:
+        I am a visiting assistant professor at Swarthmore College in the math department. My interests include:
       </p>
       <ul>
         <li>Algebraic Geometry</li>
@@ -45,10 +45,7 @@
       <h1>Current Teaching</h1>
       <ul>
         <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH215/index.html">Math 215, Discrete Math, Spring 2020</a>
-        </li>
-        <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH490/index.html">Math 490, Mathematics of Social Choice, Spring 2020</a>
+          <a href="/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
         </li>
       </ul>
     </section>
