--- a/projects.html
+++ b/projects.html
@@ -31,13 +31,15 @@
     
     <p>I am currently working on a project generalizing the card game SET. Below you can find links to various versions we have created and other material. </p>
 
-    <h2>Slides and Talks</h2>
+    <h2>Articles, Slides and Talks</h2>
 
-    <p>Here are some slides and a video for a talk <a href="https://people.maths.bris.ac.uk/~zx18363/index.html">Catherine Hsu</a> and I have given on this topic. </p>
+    <p>We published an <a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5">article in Math Horizons</a> about the geometry behind projective SET.
+
+    <p>Here are some slides and a video for a talk <a href="http://www.swarthmore.edu/NatSci/chsu2/">Catherine Hsu</a> and I have given on this topic. </p>
 
     <ul>
-      <li> <a href="set/normalsetslides.pdf">Normal slides</sub> </li>
-      <li> <a href="set/setslides.pdf">Advanced slides</a> </li>
+      <li> <a href="./set/normalsetslides.pdf">Slides</sub> </li>
+      <li> <a href="set/setslides.pdf">More advanced slides</a> </li>
       <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
     </ul>
 
