--- a/teaching.html
+++ b/teaching.html
@@ -31,10 +31,7 @@
     <p>I am currently teaching:</p>
     <ul>
       <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH215/index.html">Math 215, Discrete Math, Spring 2020</a>
-        </li>
-        <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH490/index.html">Math 490, Mathematics of Social Choice, Spring 2020</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
         </li>
     </ul>
 
@@ -44,7 +41,7 @@
       <li> Mathematics of Social Choice (at L&C) </li>
       <li>Calculus I (at L&C) </li>
       <li>Calculus II (at L&C) </li>
-      <li> Mathematical Thinking (at Wayfinding Academy)</li>
+      <li>Mathematical Thinking (at Wayfinding Academy)</li>
       <li>Math and Society (at WCCW) </li>
       <li>Pre-algebra (at WCCW) </li>
       <li>Multivariable Calculus (at UW)</li>
