updated for swarthmore

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1>Current Teaching</h1>
       <ul>
         <li>
-          <a href="/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
+          <a href="https://lucasvanmeter.github.io/classes/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
         </li>
       </ul>
     </section>
@@ -76,7 +76,7 @@
 
 
   <footer>
-  	<p>© 2019 Lucas Van Meter</p>
+  	<p>© 2020 Lucas Van Meter</p>
     <p>I would like to give credit to
       <a href="https://tscholl2.github.io/website/index.html">Travis Scholl</a> for the design of this website.</p>
   </footer>
