updated for swarthmore

--- a/projects.html
+++ b/projects.html
@@ -38,28 +38,28 @@
     <p>Here are some slides and a video for a talk <a href="http://www.swarthmore.edu/NatSci/chsu2/">Catherine Hsu</a> and I have given on this topic. </p>
 
     <ul>
-      <li> <a href="./set/normalsetslides.pdf">Slides</sub> </li>
-      <li> <a href="set/setslides.pdf">More advanced slides</a> </li>
+      <li> <a href="./set/set/normalsetslides.pdf">Slides</sub> </li>
+      <li> <a href="set/set/setslides.pdf">More advanced slides</a> </li>
       <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
     </ul>
 
     <h2>SET decks</h2>
 
-    <p><a href="set/Instructions.pdf">Instruction</a> on how to play each version.</p>
+    <p><a href="set/set/Instructions.pdf">Instruction</a> on how to play each version.</p>
 
     <h3> Projective decks </h3>
     <ul>
-      <li> <a href="set/dotset.pdf">Dot SET</a> </li>
-      <li> <a href="set/pokemonset.pdf">Pokemon SET</a> </li>
-      <li> <a href="set/fano.pdf">Fano SET</a> </li>
-      <li> <a href="set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
+      <li> <a href="set/set/dotset.pdf">Dot SET</a> </li>
+      <li> <a href="set/set/pokemonset.pdf">Pokemon SET</a> </li>
+      <li> <a href="set/set/fano.pdf">Fano SET</a> </li>
+      <li> <a href="set/set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
     </ul>
 	<h3> Non-abelian decks </h3>
     <ul>
-      <li> <a href="set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
-      <li> <a href="set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
-      <li> <a href="set/s4.pdf">Symmetric group S<sub>4</sub></a> </li>
-      <li> <a href="set/wreathset.pdf">Wreath product Z/2Z by S<sub>3</sub></a> </li>
+      <li> <a href="set/set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
+      <li> <a href="set/set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
+      <li> <a href="set/set/s4.pdf">Symmetric group S<sub>4</sub></a> </li>
+      <li> <a href="set/set/wreathset.pdf">Wreath product Z/2Z by S<sub>3</sub></a> </li>
     </ul>
 
     <h2>Online Versions</h2>
