updated for swarthmore

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="section-contact">
       <h1>Contact</h1>
       <div>
-        <span>&#128232;️</span>lvanmeter (at) lclark (dot) edu
+        <span>&#128232;️</span>lvanmet1 (at) swarthmore (dot) edu
     </div>
     </section>
 
