updated for swarthmore

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="https://arxiv.org/abs/1707.09332"><i>Two Hilbert Schemes in Computer Vision</i></a> (with M. Lieblich). Accepted for publication <br>  in SIAM Journal on Applied Algebra and Geometry, November 2019.
         </li>
         <li>
-        	<a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5"><i> Projectivizing SET</i></a> (with C. Hsu and J. Ostroff). To appear in Math Horizons.
+        	<a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5"><i> Projectivizing SET</i></a> (with C. Hsu and J. Ostroff). Math Horizons, April 2020.
         </li>
     	<li>
           <i>The Essential Variety Revisited</i> (with M. Lieblich, and B. Viray). In preparation.
