updated for swarthmore

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1>Lucas Van Meter</h1>
       <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:30%;object-fit: cover;float:right;">
       <p>
-        I am a visiting assistant professor at Swarthmore College in the math department. My interests include:
+        I am a visiting assistant professor at Swarthmore College in the math & stats department. My interests include:
       </p>
       <ul>
         <li>Algebraic Geometry</li>
