update teaching website

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -62,406 +62,287 @@
 						<th> Week </th>
 						<th> Date </th>
 						<th> Class Content </th>
-						<th> Due </th>
-						<th> Worksheets/Exams </th>						
+						<th> Standard </th>
+						<th> Notes </th>						
 					</tr>
 					<tr>
 						<td> 1 </td>
-						<td> 3 Sept. </td>
-						<td> Introduction & Syllabus </td>
+						<td> 7 Sept. </td>
+						<td> Introductions </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
-						<td></td>
-						<td> 5 Sept. </td>
-						<td> 1.1: Preview of Calculus </td>
-						<td>  </td>
+						<td> </td>
+						<td> 9 Sept. </td>
+						<td> 1.1: Measuring Velocity </td>
+						<td> Core.1 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td>  </td>
-						<td> 1.2: Intro to Limits </td>
-						<td>  </td>
+						<td> 11 Sept. </td>
+						<td> 1.2: Limits </td>
+						<td> L.1, L.2, L.3 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 2 </td>
-						<td> 9 Sept. </td>
-						<td> 1.3: Computation of Limits </td>
+						<td> 14 Sept. </td>
+						<td> 1.7: Continuity </td>
+						<td>  </td>
+						<td> Only read 1.7 up until 1.7.3 </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 16 Sept. </td>
+						<td> 1.3: Derivative at a point </a> </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
-						<td>  </td>
-						<td> 10 Sept. </td>
-						<td> 1.4: Continuity </a> </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
 						<td> </td>
-						<td> 12 Sept. </td>
-						<td> 1.4: Continuity </td>
-						<td> </td>
+						<td> 18 Sept. </td>
+						<td> 1.4: Derivative of a function </td>
+						<td> D.1, D.2, D.3, D.4</td>
 						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 13 Sept. </td>
-						<td> 1.5: Limits Involving Infinity </td>
-						<td> </td>
-						<td> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
-						<td> 16 Sept. </td>
-						<td> 1.5: Limits Involving Infinity </td>
-						<td>  </td>
+						<td> 21 Sept. </td>
+						<td> 1.5: Interpretations </td>
+						<td> Core.2 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 17 Sept. </td>
-						<td> 2.1: Tangent Lines, Velocity  </td>
+						<td> 23 Sept. </td>
+						<td> 1.6 & 1.7: Second Derivatives & Differentiablity </td>
 						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 19 Sept. </td>
-						<td>  2.1: Tangent Lines, Velocity </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 20 Sept. </td>
-						<td> 2.2: The Derivative </td>
+						<td> 25 Sept. </td>
+						<td> 2.1: Elementary Derivative Rules  </td>
+						<td> DS.1, DS.2 </td>
 						<td> </td>
-						<td>  </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
-						<td> 23 Sept. </td>
-						<td> 2.2: The Derivative </td>
+						<td> 28 Sept. </td>
+						<td> 2.2: Sine and Cosine Rules </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 24 Sept. </td>
-						<td>2.2: The Derivative  </td>
-						<td>   </td>
+						<td> 30 Sept. </td>
+						<td> 2.3: Product and Qoutient Rules </td>
+						<td> DS.5, DS.6</td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 26 Sept. </td>
-						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 27 Sept. </td>
-						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td>   </td>
+						<td> 2 Oct. </td>
+						<td> 2.4: Other Trig functions </td>
+						<td> DS.3 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
-						<td> 30 Sept. </td>
-						<td> 2.4: The Product and Quotient Rules </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 1 Oct. </td>
-						<td> 2.4: The Product and Quotient Rules </td>
-						<td> </td>
+						<td> 5 Oct. </td>
+						<td> 2.5: The chain rule  </td>
+						<td> DS.7 </td>
 						<td>  </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 3 Oct. </td>
-						<td> 2.4 and 2.5: The Chain Rule</td>
-						<td>   </td>
+						<td>  </td>
+						<td> 7 Oct. </td>
+						<td> 2.6: Inverse function rules </td>
+						<td> DS.4, DS.8 </td>
 						<td>  </td>
 					</tr>
 					<tr>
-						<td>  <Oct>
-						<td> 4 Oct. </td>
-						<td> 2.5 The Chain Rule </td>
-						<td> </td>
-						<td> </td>
+						<td>  </td>
+						<td> 9 Oct. </td>
+						<td> 2.7: Implicit Differentiation </td>
+						<td>  </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
-						<td> 7 Oct. </td>
-						<td> 2.5: The Chain Rule </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td> 8 Oct. </td>
-						<td> Midterm 1 </td>
-						<td> </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 10 Oct. </td>
-						<td> NO CLASS </td>
-						<td> </td>
+						<td> 12 Oct. </td>
+						<td> 1.8: Linear Approximations </td>
+						<td> D.4, D.6 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 11 Oct. </td>
-						<td> NO CLASS </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td> 7 </td>
 						<td> 14 Oct. </td>
-						<td> 2.6: Derivatives of Trig Functions </td>
+						<td> 1.8: Linear Approximations </td>
+						<td> </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 16 Oct. </td>
+						<td> Theorems </td>
 						<td>   </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 15 Oct. </td>
-						<td> 2.6: Derivatives of Trig Functions </td>
-						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
-						<td>  </td>
-						<td> 17 Oct. </td>
-						<td> 2.7: Der. of Expo and Log Functions </td>
-						<td>  </td>
+						<td> 7 <Oct>
+						<td> 19 Oct. </td>
+						<td> 3.1: Extreme Values </td>
+						<td> Core.3, D.7, D.8 </td>
 						<td> </td>
 					</tr>
 					<tr>
+						<td> </td>
+						<td> 21 Oct. </td>
+						<td> 3.3: Global Optimization </td>
+						<td> D.10 </td>
 						<td>  </td>
-						<td> 18 Oct. </td>
-						<td> 2.7: Der. of Expo and Log Functions </td>
-						<td>  </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 23 Oct. </td>
+						<td> 3.4: Applied Optimization </td>
+						<td> Core.4 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 8 </td>
-						<td> 21 Oct. </td>
-						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
+						<td> 26 Oct. </td>
+						<td> 3.2: Families of Functions </td>
+						<td> D.9</td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 28 Oct. </td>
+						<td> 3.5: Related Rates </td>
+						<td> Core.5 </td>
+						<td>  </td>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 30 Oct. </td>
+						<td> ??? </td>
 						<td>   </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 22 Oct. </td>
-						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
-						<td>  </td>
 						<td> </td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td> 24 Oct. </td>
-						<td> 2.10: Mean Value Theorem  </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 25 Oct. </td>
-						<td> 32.10: Mean Value Theorem </td>
-						<td>  </td>
-						<td>  </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
-						<td> 28 Oct. </td>
-						<td> 3.1: Linear Approximation, Newton’s Method </td>
-						<td>   </td>
+						<td> 2 Nov. </td>
+						<td> 2.8: L'Hopitals Rule </td>
+						<td> L.4, L.5 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 29 Oct. </td>
-						<td> 3.1: Linear Approximation, Newton’s Method </td>
-						<td> </td>
+						<td> 4 Nov. </td>
+						<td> Parametric Equations </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 31 Oct. </td>
-						<td> 3.2: L’Hopital’s Rule  </td>
 						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 1 Nov. </td>
-						<td> 3.2: L’Hopital’s Rule </td>
+						<td> 6 Nov. </td>
+						<td> 4.1: Measuring Distance </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 10 </td>
-						<td> 4 Nov. </td>
-						<td> 3.3: Maximum & Minimum </td>
-						<td>  </td>
+						<td> 9 Nov. </td>
+						<td> 4.2: Riemann Sums </td>
+						<td> I.1 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 5 Nov. </td>
-						<td> 3.4: Increasing & Decreasing </td>
-						<td>  </td>
+						<td> 11 Nov. </td>
+						<td> 4.3: The Definite Integral </td>
+						<td> I.2 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 7 Nov. </td>
-						<td> 3.5: Concavity </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 8 Nov. </td>
-						<td> 3.6: Curve Sketching </td>
-						<td>  </td>
+						<td> 13 Nov. </td>
+						<td> 4.4: The FTOC </td>
+						<td> Core.6, Core.7, I.5 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
-						<td> 11 Nov. </td>
-						<td> 3.7: Optimization </td>
-						<td> </td>
+						<td> 16 Nov. </td>
+						<td> 5.1: Antiderivatives </td>
+						<td> I.3, I.4 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 12 Nov. </td>
-						<td> 3.7: Optimization </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td> 14 Nov. </td>
-						<td> 3.8: Related Rates </td>
+						<td> 18 Nov. </td>
+						<td>  </td>
 						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 15 Nov. </td>
-						<td> 3.8: Related Rates </td>
+						<td> 20 Nov. </td>
 						<td>  </td>
-						<td>  </td>
+						<td> </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> 12 </td>
-						<td> 18 Nov. </td>
-						<td> Midterm 2 </td>
-						<td> </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 19 Nov. </td>
-						<td> 4.2:Sigma Notation </td>
+						<td> 23 Nov. </td>
+						<td> No Class </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
-						<td> </td>
-						<td> 21 Nov. </td>
-						<td> 4.3: Area </td>
-						<td>   </td>
+						<td>  </td>
+						<td> 25 Nov. </td>
+						<td> No Class </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 22 Nov. </td>
-						<td> 4.3: Area </td>
+						<td> 27 Nov. </td>
+						<td> No Class </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
-						<td> 25 Nov. </td>
-						<td> 4.4 The Definite Integral </td>
+						<td> 30 Nov. </td>
+						<td> 5.2: The Second FTOC </td>
 						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 26 Nov. </td>
-						<td> 4.4 The Definite Integral </td>
-						<td>  </td>
-						<td>  </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 28 Nov. </td>
-						<td> NO CLASS </td>
+						<td> 2 Dec. </td>
+						<td> 5.2: The Second FTOC </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
-						<td> 29 Nov. </td>
-						<td> NO CLASS </td>
+						<td> 4 Dec. </td>
+						<td> 7.1: Differential Equations </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 14 </td>
-						<td> 2 Dec. </td>
-						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 3 Dec. </td>
-						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
+						<td> 8 Dec. </td>
+						<td> Finals Week </td>
 						<td> </td>
-						<td> 5 Dec. </td>
-						<td> 4.5: The Fundamental Theorem of Calculus, 4.1:Antiderivatives </td>
-						<td>  </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 6 Dec. </td>
-						<td> 4.6: The Substitution Method </td>
-						<td>   </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td> 15 </td>
-						<td> 9 Dec. </td>
-						<td> 4.6: The Substitution Method </td>
-						<td> </td>
-						<td>  </td>
-					</tr>
-					<tr>
-						<td>  </td>
-						<td> 10 Dec. </td>
-						<td> 4.6: The Substitution Method </td>
-						<td>  </td>
 						<td>  </td>
 					</tr>
 				</table>
