update teaching website

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -278,22 +278,22 @@
 					<tr>
 						<td> 11 </td>
 						<td> 16 Nov. </td>
-						<td> 5.1: Antiderivatives </td>
-						<td> I.3, I.4 </td>
+						<td> 4.4: The FTOC </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 18 Nov. </td>
-						<td>  </td>
+						<td> 5.1: Antiderivatives </td>
 						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 20 Nov. </td>
-						<td>  </td>
-						<td> </td>
+						<td> 5.1: Antiderivatives </td>
+						<td> I.3, I.4 </td>
 						<td> </td>
 					</tr>
 					<tr>
