update teaching website

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -90,7 +90,7 @@
 						<td> 2 </td>
 						<td> 14 Sept. </td>
 						<td> 1.7: Continuity </td>
-						<td>  </td>
+						<td> L.4 </td>
 						<td> Only read 1.7 up until 1.7.3 </td>
 					</tr>
 					<tr>
@@ -118,7 +118,7 @@
 						<td> </td>
 						<td> 23 Sept. </td>
 						<td> 1.6 & 1.7: Second Derivatives & Differentiablity </td>
-						<td>  </td>
+						<td> D.6 </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -167,21 +167,21 @@
 						<td>  </td>
 						<td> 9 Oct. </td>
 						<td> 2.7: Implicit Differentiation </td>
-						<td>  </td>
+						<td> DS.9 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 12 Oct. </td>
 						<td> 1.8: Linear Approximations </td>
-						<td> D.4, D.6 </td>
+						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 14 Oct. </td>
 						<td> 1.8: Linear Approximations </td>
-						<td> </td>
+						<td> D.7 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -195,14 +195,14 @@
 						<td> 7 <Oct>
 						<td> 19 Oct. </td>
 						<td> 3.1: Extreme Values </td>
-						<td> Core.3, D.7, D.8 </td>
+						<td> Core.3, D.8 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 21 Oct. </td>
 						<td> 3.3: Global Optimization </td>
-						<td> D.10 </td>
+						<td> D.9 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -216,28 +216,28 @@
 						<td> 8 </td>
 						<td> 26 Oct. </td>
 						<td> 3.2: Families of Functions </td>
-						<td> D.9</td>
+						<td> D.10</td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 28 Oct. </td>
 						<td> 3.5: Related Rates </td>
-						<td> Core.5 </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 30 Oct. </td>
-						<td> ??? </td>
-						<td>   </td>
+						<td> 3.5: Related Rates </td>
+						<td> Core.5 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 2 Nov. </td>
 						<td> 2.8: L'Hopitals Rule </td>
-						<td> L.4, L.5 </td>
+						<td> L.5, L.6 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -272,28 +272,28 @@
 						<td> </td>
 						<td> 13 Nov. </td>
 						<td> 4.4: The FTOC </td>
-						<td> Core.6, Core.7, I.5 </td>
+						<td> Core.6  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
 						<td> 16 Nov. </td>
 						<td> 4.4: The FTOC </td>
-						<td>  </td>
+						<td> I.5 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 18 Nov. </td>
 						<td> 5.1: Antiderivatives </td>
-						<td>   </td>
+						<td> I.3 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 20 Nov. </td>
 						<td> 5.1: Antiderivatives </td>
-						<td> I.3, I.4 </td>
+						<td> I.4 </td>
 						<td> </td>
 					</tr>
 					<tr>
