changed class schedule

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -96,84 +96,84 @@
 					<tr>
 						<td> </td>
 						<td> 16 Sept. </td>
-						<td> 1.3: Derivative at a point </a> </td>
-						<td>  </td>
+						<td> 2.8: Limits involving infinity </a> </td>
+						<td> L.7 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 Sept. </td>
-						<td> 1.4: Derivative of a function </td>
+						<td> 1.3: Derivative at a point </td>
 						<td> D.1, D.2, D.3, D.4</td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
 						<td> 21 Sept. </td>
-						<td> 1.5: Interpretations </td>
+						<td> 1.4: Derivative of a function  </td>
 						<td> Core.2 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 23 Sept. </td>
-						<td> 1.6 & 1.7: Second Derivatives & Differentiablity </td>
+						<td> 1.5: Interpretations </td>
 						<td> D.6 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 25 Sept. </td>
-						<td> 2.1: Elementary Derivative Rules  </td>
+						<td> 1.6 & 1.7: Second Derivatives & Differentiablity   </td>
 						<td> DS.1, DS.2 </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
 						<td> 28 Sept. </td>
-						<td> 2.2: Sine and Cosine Rules </td>
+						<td> 2.1: Elementary Derivative Rules  </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 30 Sept. </td>
-						<td> 2.3: Product and Qoutient Rules </td>
+						<td> 2.2: Sine and Cosine Rules </td>
 						<td> DS.5, DS.6</td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 2 Oct. </td>
-						<td> 2.4: Other Trig functions </td>
+						<td> 2.3: Product and Qoutient Rules </td>
 						<td> DS.3 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 5 Oct. </td>
-						<td> 2.5: The chain rule  </td>
+						<td> 2.4: Other Trig functions  </td>
 						<td> DS.7 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 7 Oct. </td>
-						<td> 2.6: Inverse function rules </td>
+						<td> 2.5: The chain rule </td>
 						<td> DS.4, DS.8 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 9 Oct. </td>
-						<td> 2.7: Implicit Differentiation </td>
+						<td> 2.6: Inverse function rules </td>
 						<td> DS.9 </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 12 Oct. </td>
-						<td> 1.8: Linear Approximations </td>
+						<td> 2.7: Implicit Differentiation </td>
 						<td>  </td>
 						<td> </td>
 					</tr>
@@ -237,7 +237,7 @@
 						<td> 9 </td>
 						<td> 2 Nov. </td>
 						<td> 2.8: L'Hopitals Rule </td>
-						<td> L.5, L.6 </td>
+						<td> L.8 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -328,7 +328,7 @@
 						<td> </td>
 						<td> 2 Dec. </td>
 						<td> 5.2: The Second FTOC </td>
-						<td>  </td>
+						<td> I.5 </td>
 						<td>  </td>
 					</tr>
 					<tr>
