changed class schedule

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -30,23 +30,27 @@
 			<h3>Links</h3>
   			<ul>
   				<li> <a href="./syllabus/syllabus_fall2020_math15.pdf">Syllabus</a></p>
-  				<li> <a href="">Moodle</a></p>
-  				<li> <a href="">???</a></p>
+  				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a></p>
+  				<li> <a href="https://activecalculus.org/single/book-1.html">Book</a></p>
+  				<li> <a href="https://www.youtube.com/playlist?list=PL9bIjQJDwfGuXQHuS5Jkmum_CFILoCZX-">Videos</a></p>
+  				<li> <a href="https://webwork.swarthmore.edu/webwork2/">Webwork</a></p>
+  				<li> <a href="https://docs.google.com/document/d/15vSFZ8ydztWaK9YE8Ezp5Y4ZApc8jUvDRs8uK9vVtfg/edit">Pirates Schedule</a></p>
+  				<li> <a href="https://www.gradescope.com/">Gradescope</a></p>
   			</ul>
 
  			<h4>Class Info</h4>
-  				<p>Lucas Van Meter<br>lvanmet1@swarthmore.edu</p>
-  				<p>???<br>
+  				<p>Lucas Van Meter<br>
+  				lvanmet1@swarthmore.edu</p>
 
   			<h4>Office Hours</h4>
   				<p>???<br>????<br>???<br> Or by appointment</p>				
 		</div>
 
 		<div id="col2">
-			<section id="announcments">
-			    <h2>Announcments</h2>
+			<section id="welcome">
+			    <h2>Welcome!</h2>
 			    <ul>
-				    <li>Welcome to Calculus I! Check back here for more updates during the semester. </li>
+				    <li>Welcome to Calculus I! </li>
 			    </ul>
 	    	</section>
 
@@ -98,7 +102,7 @@
 						<td> 16 Sept. </td>
 						<td> 2.8: Limits involving infinity </a> </td>
 						<td> L.7 </td>
-						<td>  </td>
+						<td> Start at 2.8.2 and read until L'Hopitals rule</td>
 					</tr>
 					<tr>
 						<td> </td>
