updated gabes website links

--- a/classes/MATH15/index.html
+++ b/classes/MATH15/index.html
@@ -31,7 +31,7 @@
   			<ul>
   				<li> <a href="./syllabus/syllabus_fall2020_math15.pdf">Syllabus</a></p>
   				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a></p>
-  				<li> <a href="https://activecalculus.org/single/book-1.html">Book</a></p>
+  				<li> <a href="https://activecalculus.org/">Book</a></p>
   				<li> <a href="https://www.youtube.com/playlist?list=PL9bIjQJDwfGuXQHuS5Jkmum_CFILoCZX-">Videos</a></p>
   				<li> <a href="https://webwork.swarthmore.edu/webwork2/">Webwork</a></p>
   				<li> <a href="https://docs.google.com/document/d/15vSFZ8ydztWaK9YE8Ezp5Y4ZApc8jUvDRs8uK9vVtfg/edit">Pirates Schedule</a></p>
