--- a/projects.html
+++ b/projects.html
@@ -64,10 +64,9 @@
 
     <h2>Online Versions</h2>
 
-  	<p> <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabriel Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online</p>
+  	<p> The fantastic mathematician <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabriel Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online!</p>
   	<ul>
-      <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S3/index.html">Online symmetric group S<sub>3</sub></a> </li>
-      <li> <a href="http://www.gabrieldorfsmanhopkins.com/nonabelianSet/S4/index.html">Online symmetric group S<sub>4</sub></a> </li>
+      <li> <a href="http://www.gabrieldorfsmanhopkins.com/digital_fabrication/nonabelianSet.html">Online game</a> </li>
     </ul>
 
     
