made general updates to website and set up new class websites

--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    <p>© 2019 Lucas Van Meter</p>
+    <p>© 2021 Lucas Van Meter</p>
   </footer>
 
 </body>
