--- a/hobbies.html
+++ b/hobbies.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -31,6 +31,7 @@
 
     <p>Every website needs a page that is incomplete and constantly under construction right?</p>
 
+<!--
     <section id="reading">
       <h1>Reading</h1>
       <ul>
@@ -39,6 +40,7 @@
         </li>
       </ul>
     </section>
+-->
 
     <section id="games">
       <h1>Games</h1>
@@ -67,7 +69,7 @@
   </main>
 
   <footer>
-    <p>© 2019 Lucas Van Meter</p>
+    <p>© 2021 Lucas Van Meter</p>
   </footer>
 
 </body>
