--- a/outreach.html
+++ b/outreach.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -28,7 +28,7 @@
 
   <main>
     <h1>Outreach</h1>
-    <p>Two of my favorite groups to volunteer for are FEEPS and Math Circles. FEEPS is an amazing program offering college courses to women in prison. Math circle is a wonderful program offering mathematical joy to middle schoolers.
+    <p>Two of my favorite groups to volunteer for are FEEPS and Math Circles. FEEPS is an amazing program offering college courses to women in prison. Math circles are all over the country and offer mathematical joy to middle schoolers.
     <ul>
       <li>
         <a href="https://fepps.org/">FEPPS</a>
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <p>© 2019 Lucas Van Meter</p>
+    <p>© 2021 Lucas Van Meter</p>
   </footer>
 
 </body>
