--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -27,11 +27,16 @@
   </header>
 
   <main>
-    <h1>Projects</h1>
+
+    <h1>SET</h1>
+
+    <img alt="Projective SET" src="img/projsetpicture.png" style="width:30%;object-fit: cover;float:right;">
+
     
     <p>I am currently working on a project generalizing the card game SET. Below you can find links to various versions we have created and other material. </p>
 
     <h2>Articles, Slides and Talks</h2>
+
 
     <p>We published an <a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5">article in Math Horizons</a> about the geometry behind projective SET.
 
@@ -55,6 +60,7 @@
       <li> <a href="set/set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
     </ul>
 	<h3> Non-abelian decks </h3>
+  <img alt="Wreath tiles" src="img/wreathtiles.jpeg" style="width:30%;object-fit: cover;float:center;">
     <ul>
       <li> <a href="set/set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
       <li> <a href="set/set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
@@ -74,7 +80,7 @@
   </main>
 
   <footer>
-    <p>© 2020 Lucas Van Meter</p>
+    <p>© 2021 Lucas Van Meter</p>
   </footer>
 
 </body>
