--- a/teaching.html
+++ b/teaching.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -28,17 +28,31 @@
 
   <main>
     <h1>Teaching</h1>
+
+<!--
+    <h2>Links</h2>
+    <p>Some links to things that have inspired my thinking</p>
+    <ul>
+    	<li> <a href="https://www.youtube.com/watch?v=wh0OS4MrN3E&feature=youtu.be">Growth Mindset</a> </li>
+    	<li> <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">On Grading (long video)</a> </li>
+    </ul>
+-->
+
     <p>I am currently teaching:</p>
     <ul>
       <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
-        </li>
+        <a href="https://lucasvanmeter.github.io/classes/math3/index.html">Math 3, Mathematical Thinking, Spring 2021</a>
+      </li>	
+      <li>
+        <a href="https://lucasvanmeter.github.io/classes/math34/index.html">Math 34, Multivariable Calculus, Spring 2021</a>
+      </li>
     </ul>
 
     <p>In the past I have taught:</p>
     <ul>
-      <li> Discrete Math (at L&C) </li>
-      <li> Mathematics of Social Choice (at L&C) </li>
+      <li>Calculus I (at Swarthmore) </li>
+      <li>Discrete Math (at L&C) </li>
+      <li>Mathematics of Social Choice (at L&C) </li>
       <li>Calculus I (at L&C) </li>
       <li>Calculus II (at L&C) </li>
       <li>Mathematical Thinking (at Wayfinding Academy)</li>
@@ -54,7 +68,7 @@
   </main>
 
   <footer>
-    <p>© 2020 Lucas Van Meter</p>
+    <p>© 2021 Lucas Van Meter</p>
   </footer>
 
 </body>
