--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">Projects</a>
+      <a href="projects.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
@@ -45,8 +45,11 @@
       <h1>Current Teaching</h1>
       <ul>
         <li>
-          <a href="https://lucasvanmeter.github.io/classes/MATH15/index.html">Math 15, Calculus I, Fall 2020</a>
-        </li>
+          <a href="https://lucasvanmeter.github.io/classes/math3/index.html">Math 3, Mathematical Thinking, Spring 2021</a>
+        </li> 
+        <li>
+          <a href="https://lucasvanmeter.github.io/classes/math34/index.html">Math 34, Multivariable Calculus, Spring 2021</a>
+      </li>
       </ul>
     </section>
 
@@ -54,7 +57,7 @@
       <h1>Publications</h1>
       <ul>
         <li>
-          <a href="https://arxiv.org/abs/1707.09332"><i>Two Hilbert Schemes in Computer Vision</i></a> (with M. Lieblich). Accepted for publication <br>  in SIAM Journal on Applied Algebra and Geometry, November 2019.
+          <a href="https://arxiv.org/abs/1707.09332"><i>Two Hilbert Schemes in Computer Vision</i></a> (with M. Lieblich). <br> SIAM Journal on Applied Algebra and Geometry, May 2020
         </li>
         <li>
         	<a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5"><i> Projectivizing SET</i></a> (with C. Hsu and J. Ostroff). Math Horizons, April 2020.
@@ -76,7 +79,7 @@
 
 
   <footer>
-  	<p>© 2020 Lucas Van Meter</p>
+  	<p>© 2021 Lucas Van Meter</p>
     <p>I would like to give credit to
       <a href="https://tscholl2.github.io/website/index.html">Travis Scholl</a> for the design of this website.</p>
   </footer>
